<resources>
    <string name="app_name">Matrix meditation method</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_works">Works</string>
    <string name="title_profile">Profile</string>
    <string name="loginPlease">Enter your login</string>
    <string name="passwordPlease">Enter your password</string>
    <string name="loginIn">Login to account</string>
    <string name="registration">Account registration</string>
    <string name="regEnd">Register profile</string>
    <string name="regEmail">Enter your email</string>
    <string name="butAddImage">Add image to work (optional)</string>
    <string name="butAddContent">Add content</string>
    <string name="signOut">Sign out</string>
    <string name="content_desc">Add a short description of the work</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_audio_to_work">Add audio to work</string>
    <string name="add_title">Add title</string>
    <string name="add_work_in_english">Add work (in English)</string>
    <string name="add_work_in_russian">Add a translation of this work</string>
    <string name="add_work">Add work</string>
    <string name="regis_nav_favorite">You are not logged in. Sign in to see your favorites</string>
    <string name="nav_authorization">Return to authorization</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
