<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".profile.AddWorkFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/titleAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:padding="5dp"
                android:hint="@string/add_title"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittextstyle"
                android:inputType="textMultiLine"
                android:lines="2" />


            <EditText
                android:id="@+id/contentDesAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextstyle"
                android:ems="10"
                android:gravity="start|top"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/content_desc"
                android:inputType="textMultiLine"
                android:lines="2" />

            <EditText
                android:id="@+id/contentEnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@drawable/edittextstyle"
                android:gravity="start|top"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:hint="@string/add_work_in_english"
                android:inputType="textMultiLine"
                android:lines="10" />

            <EditText
                android:id="@+id/contentRuAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/add_work_in_russian"
                android:inputType="textMultiLine"
                android:background="@drawable/edittextstyle"
                android:lines="10"
                android:layout_marginBottom="20dp"
                />

            <Button
                android:id="@+id/addAudioPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFF"
                android:background="#2196f3"
                android:layout_marginBottom="10dp"
                android:text="@string/add_audio_to_work" />

            <Button
                android:id="@+id/addImagePath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFF"
                android:layout_marginBottom="10dp"
                android:background="#2196f3"
                android:text="@string/butAddImage"
                />

            <Button
                android:id="@+id/nextAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_work"
                android:textColor="#FFFF"
                android:background="#2196f3"
                android:layout_marginBottom="60dp"/>

        </LinearLayout>
</ScrollView>
